[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fonts/LibreBaskerville-Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://LoadGame.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 14
use_filter = true
font_data = ExtResource( 2 )

[node name="LoadGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.301961, 0.301961, 0.301961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game" parent="." instance=ExtResource( 1 )]
position = Vector2( 89, 160 )
scale = Vector2( 0.7, 0.7 )

[node name="PrevGame" type="Button" parent="."]
margin_left = 8.0
margin_top = 159.884
margin_right = 64.0
margin_bottom = 461.884
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextGame" type="Button" parent="."]
margin_left = 416.0
margin_top = 160.0
margin_right = 472.0
margin_bottom = 462.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="."]
visible = false
margin_left = 89.4095
margin_top = 40.0
margin_right = 391.409
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "Tap in the board to continue the game. Drag left/right or use the buttons to see more saved matches"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="board_clicked" from="Game" to="." method="_on_Game_board_clicked"]
[connection signal="pressed" from="PrevGame" to="." method="_on_PrevGame_pressed"]
[connection signal="pressed" from="NextGame" to="." method="_on_NextGame_pressed"]
